@@ -1,3 +1,7 @@
+2006-09-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+
+    * olive/frontend/gtk/__init__.py: fixed a bug regarding menu item activation
+
 2006-09-02  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
     * po/olive-gtk.pot: regenerated
